# texas-grocery-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LAUNCH-PLAN.md  TROUBLESHOOTING.md
docs/.scratch/: brainstorm-opensource-release-20260129-shared.md  research-successful-mcp-log.md  task-001-market-research-log.md  task-002-browser-automation-research-log.md  task-1-log.md  task-10-log.md  task-11-log.md  task-2-log.md  task-3-log.md  task-4-log.md  task-5-log.md  task-6-log.md
docs/.scratch/agents/: architect-notes-opensource-release.md  market-research-notes-opensource-release.md  requirements-advisor-notes-opensource-release.md  tech-research-notes-opensource-release.md
docs/brainstorms/: brainstorm-opensource-release-20260129-final.md
docs/plans/: 2026-01-29-heb-mcp-design.md  2026-01-29-texas-grocery-mcp-implementation.md
docs/research/: research-successful-mcp-synthesis.md
docs/research/market/: research-successful-mcp-market.md
docs/research/technical/: FINDINGS-SUMMARY.md  browser-automation-mcp-research.md  mcp-quick-reference.md  mcp-servers-python-release-research.md  research-successful-mcp-technical.md
docs/reviews/: task-10-review.md  task-11-review.md
src/texas_grocery_mcp/: server.py  state.py
src/texas_grocery_mcp/auth/: browser_refresh.py  credentials.py  session.py
src/texas_grocery_mcp/clients/: __init__.py  graphql.py
src/texas_grocery_mcp/models/: __init__.py  cart.py  coupon.py  errors.py  health.py  product.py  store.py
tests/: conftest.py
tests/integration/: test_product_details_live.py
tests/unit/: test_cache.py  test_cart_tools.py  test_cart_verification.py  test_circuit_breaker.py  test_config.py  test_coupon_tools.py  test_credentials.py  test_geocoding.py  test_graphql_client.py  test_health.py  test_logging.py  test_models.py  test_product_search_diagnostics.py  test_product_tools.py  test_retry.py  test_secure_file.py  test_session_refresh.py  test_state_manager.py  test_store_tools.py  test_throttle.py
(+18 files in other folders)
