[project]
name = "texas-grocery-mcp"
version = "0.1.2"
description = "MCP server for HEB grocery store integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Michael Walker"}
]
keywords = ["mcp", "heb", "grocery", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12",
    "redis>=5.0",
    "structlog>=24.0",
    "prometheus-client>=0.19",
    "keyring>=25.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
# Browser support for fast session refresh (10-15s vs 4min)
# Install with: pip install texas-grocery-mcp[browser]
browser = [
    "playwright>=1.40.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.1",
    "respx>=0.21",
    "playwright>=1.40.0",
]

[project.scripts]
texas-grocery-mcp = "texas_grocery_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mgwalkerjr95/texas-grocery-mcp"
Repository = "https://github.com/mgwalkerjr95/texas-grocery-mcp"
Issues = "https://github.com/mgwalkerjr95/texas-grocery-mcp/issues"
Changelog = "https://github.com/mgwalkerjr95/texas-grocery-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/texas_grocery_mcp"]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
